--- a/saarthi.html
+++ b/saarthi.html
@@ -11,7 +11,7 @@
         <nav>
           <div class="container">
             <div class="logo">
-              <img src="logo.png" alt="Sarthi Logo">
+              <img src="logo.png" alt="Sarthi Logo" class="logo">
             </div>
             <ul class="nav-links">
               <li><a href="#home">Home</a></li>
@@ -25,6 +25,9 @@
       
 
   <section id="home">
+    <div class="video">
+      <video src="./video.mp4" autoplay loop muted type="video/mp4"></video>
+    </div>
     <div class="hero">
       <h1>Empower Your Journey with Sarthi</h1>
       <h2>Experience the Confidence and Safety of Female Drivers</h2>
@@ -46,7 +49,6 @@
       </div>
     </div>
   </section>
-  
 
   <section id="services">
     <div class="container">
