update bug patch

--- a/saarthi.html
+++ b/saarthi.html
@@ -36,13 +36,13 @@
   </section>
 
   <section id="about">
+    <center><h2>About Sarthi</h2></center>
     <div class="container">
-      <h2>About Sarthi</h2>
       <div class="about-content">
         <div class="about-image">
-          <img src="images/about.jpg" alt="About Sarthi">
+          <!-- <img src="images/about.jpg" alt="About Sarthi"> -->
         </div>
-        <div class="about-text">
+        <div  align="center" style="font-size: 20px;">
           <p>Sarthi is a leading female driver rental company dedicated to providing safe and reliable transportation solutions. Our mission is to empower women by offering them opportunities in the traditionally male-dominated field of professional driving.</p>
           <p>With a team of highly skilled and trained female drivers, Sarthi ensures a comfortable and secure travel experience for our clients. We prioritize customer satisfaction and strive to exceed expectations with our exceptional service.</p>
         </div>
@@ -51,20 +51,20 @@
   </section>
 
   <section id="services">
+    <center><h2>Our Services</h2></center>
     <div class="container">
-      <h2>Our Services</h2>
       <div class="services-list">
-        <div class="service">
+        <div align="left" class="service">
           <img src="images/chauffeur.jpg" alt="Chauffeur Service">
           <h3>Chauffeur Service</h3>
           <p>Hire a professional female chauffeur for a luxurious and comfortable travel experience.</p>
         </div>
-        <div class="service">
+        <div align="center" class="service">
           <img src="images/personal-driver.jpg" alt="Personal Driver">
           <h3>Personal Driver</h3>
           <p>Get a dedicated female driver for your personal transportation needs, ensuring convenience and safety.</p>
         </div>
-        <div class="service">
+        <div align="right" class="service">
           <img src="images/event-driver.jpg" alt="Event Driver">
           <h3>Event Driver</h3>
           <p>Make your special occasions memorable with our experienced female event drivers.</p>
@@ -74,7 +74,7 @@
   </section>
   
 
-  <section id="contact">
+  <!-- <section id="contact">
     <div class="container">
       <h2>Contact Us</h2>
       <div class="contact-form">
@@ -97,7 +97,7 @@
         </form>
       </div>
     </div>
-  </section>
+  </section> -->
   
 
   <footer>
