--- a/saarthi.html
+++ b/saarthi.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="saarthi.css">
 </head>
 <body>
-    <header>
+     <header>
         <nav>
           <div class="container">
             <div class="logo">
@@ -22,8 +22,6 @@
           </div>
         </nav>
       </header>
-      
-
   <section id="home">
     <div class="video">
       <video src="./video.mp4" autoplay loop muted type="video/mp4"></video>
@@ -72,36 +70,10 @@
       </div>
     </div>
   </section>
-  
-
-  <!-- <section id="contact">
-    <div class="container">
-      <h2>Contact Us</h2>
-      <div class="contact-form">
-        <form id="contact-form">
-          <div class="form-group">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-          </div>
-          <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-          </div>
-          <div class="form-group">
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" required></textarea>
-          </div>
-          <div class="form-group">
-            <button type="submit" class="submit-button">Send Message</button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </section> -->
-  
-
   <footer>
     <p>&copy; 2023 Sarthi - Female Driver Rental</p>
+    <br><br><br>
+    <button class="button" align="left">Leave a comment</button>
   </footer>
 
   <script src="saarthi.js"></script>
