--- a/saarthi.html
+++ b/saarthi.html
@@ -73,7 +73,7 @@
   <footer>
     <p>&copy; 2023 Sarthi - Female Driver Rental</p>
     <br><br><br>
-    <button class="button" align="left">Leave a comment</button>
+    <!-- <button class="button" align="left">Leave a comment</button> -->
   </footer>
 
   <script src="saarthi.js"></script>
