--- a/saarthi.html
+++ b/saarthi.html
@@ -33,42 +33,9 @@
     </div>
   </section>
   <section id="about">
-    <br><br><br><br><br><br><br><br>
-    <center><h2>About Sarthi</h2></center>
-    <div class="container">
-      <div class="about-content">
-        <div class="about-image">
-          <!-- <img src="images/about.jpg" alt="About Sarthi"> -->
-        </div>
-        <div  align="center" style="font-size: 20px;" class="trans">
-          <p>Sarthi is a leading female driver rental company dedicated to providing safe and reliable transportation solutions. Our mission is to empower women by offering them opportunities in the traditionally male-dominated field of professional driving.</p>
-          <p>With a team of highly skilled and trained female drivers, Sarthi ensures a comfortable and secure travel experience for our clients. We prioritize customer satisfaction and strive to exceed expectations with our exceptional service.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="services">
-    <center><h2>Our Services</h2></center>
-    <div class="container">
-      <div class="services-list">
-        <div align="left" class="service">
-          <img src="images/chauffeur.jpg" alt="Chauffeur Service">
-          <h3>Chauffeur Service</h3>
-          <p>Hire a professional female chauffeur for a luxurious and comfortable travel experience.</p>
-        </div>
-        <div align="center" class="service">
-          <img src="images/personal-driver.jpg" alt="Personal Driver">
-          <h3>Personal Driver</h3>
-          <p>Get a dedicated female driver for your personal transportation needs, ensuring convenience and safety.</p>
-        </div>
-        <div align="right" class="service">
-          <img src="images/event-driver.jpg" alt="Event Driver">
-          <h3>Event Driver</h3>
-          <p>Make your special occasions memorable with our experienced female event drivers.</p>
-        </div>
-      </div>
-    </div>
+    <center><img src="./sarthi.png" alt="image" width="90%" height="100%" class="image"></center>
+    <center><img src="./sarthihowitwork.png" alt="image" width="90%" height="100%" class="image"></center>
+    <center><img src="./homepagelast_page-0001.jpg" alt="image" width="100%" height="100%" class="image"></center>
   </section>
   <footer>
     <p>&copy; 2023 Sarthi - Female Driver Rental</p>
