--- a/bookingpricing.html
+++ b/bookingpricing.html
@@ -22,10 +22,10 @@
       </div>
     </nav>
   </header>
-
+  <br><br><br>
   <section id="booking">
     <div class="container">
-      <h2>Book Your Sarthi Driver</h2>
+      <center><h2>Book Your Sarthi Driver</h2></center><br>
       <form id="booking-form">
         <input type="text" placeholder="Full Name">
         <input type="email" placeholder="Email">
