--- a/bookingpricing.html
+++ b/bookingpricing.html
@@ -22,23 +22,28 @@
       </div>
     </nav>
   </header>
-<<<<<<< HEAD
+
   <br><br><br>
-=======
-  <br><br><br><br>
->>>>>>> e203df43b2110fd701d4fc38d037912d60784af4
+
   <section id="booking">
     <div class="container">
-      <center><h2>Book Your Sarthi Driver</h2></center><br>
-      <form id="booking-form">
-        <input type="text" placeholder="Full Name">
-        <input type="email" placeholder="Email">
-        <input type="tel" placeholder="Phone Number">
-        <input type="date" placeholder="Date">
-        <input type="time" placeholder="Time">
-        <textarea placeholder="Additional Comments"></textarea>
-        <button type="button" onclick="openPopup()">Submit Booking</button>
-      </form>
+      <center><br>
+      <div class="subscribe">
+        <br>
+        <p style="font-size: 30px;">Book Your Driver</p><br><br>
+        <input placeholder="Full Name" class="subscribe-input" name="name" type="text">
+        <br>
+        <input placeholder="Your e-mail" class="subscribe-input" name="email" type="email">
+        <br>
+        <input placeholder="Phone Number" class="subscribe-input" name="phno" type="tel">
+        <br>
+        <input placeholder="Date" class="subscribe-input" name="date" type="date">
+        <br>
+        <input placeholder="Time" class="subscribe-input" name="time" type="time">
+        <br>
+        <div class="submit-btn" onclick="openPopup()">SUBMIT</div>
+      </div>
+    </center>
 
       <div class="popup" id="popup">
         <form class="plan-chooser">
