--- a/driverprofile.html
+++ b/driverprofile.html
@@ -22,18 +22,9 @@
       </div>
     </nav>
   </header>
-
+<br><br><br><br><br>
   <section id="driver-profile">
-    <div class="container">
-      <div class="profile-card">
-        <img src="path/to/driver-profile-image.jpg" alt="Driver Profile Image">
-        <h2>Driver's Name</h2>
-        <p>Experience: X years</p>
-        <p>Rating: X.X</p>
-        <p>Specializations: Skill 1, Skill 2, Skill 3</p>
-        <p>Available for: Service 1, Service 2, Service 3</p>
-      </div>
-    </div>
+    <div class="drivercard">Image</div>
   </section>
 
   <footer>
