--- a/saarthi.html
+++ b/saarthi.html
@@ -37,12 +37,58 @@
     <center><img src="./sarthihowitwork.png" alt="image" width="90%" height="100%" class="image"></center>
     <center><img src="./homepagelast_page-0001.jpg" alt="image" width="100%" height="100%" class="image"></center>
   </section>
+
+  <!-- <section id="services">
+    <center><h2>Our Services</h2></center>
+    <div class="container">
+      <div class="services-list">
+        <div align="left" class="service">
+          <img src="images/chauffeur.jpg" alt="Chauffeur Service">
+          <h3>Chauffeur Service</h3>
+          <p>Hire a professional female chauffeur for a luxurious and comfortable travel experience.</p>
+        </div>
+        <div align="center" class="service">
+          <img src="images/personal-driver.jpg" alt="Personal Driver">
+          <h3>Personal Driver</h3>
+          <p>Get a dedicated female driver for your personal transportation needs, ensuring convenience and safety.</p>
+        </div>
+        <div align="right" class="service">
+          <img src="images/event-driver.jpg" alt="Event Driver">
+          <h3>Event Driver</h3>
+          <p>Make your special occasions memorable with our experienced female event drivers.</p>
+        </div>
+      </div>
+    </div>
+  </section> -->
+  <p>&copy; 2023 Sarthi - Female Driver Rental</p>
   <footer>
-    <p>&copy; 2023 Sarthi - Female Driver Rental</p>
-    <br><br><br>
-    <!-- <button class="button" align="left">Leave a comment</button> -->
+   <div class="left">
+    <img src="./logo.png" alt="Sarthi Logo" class="logo">
+    <br><br><br><br><br><br>
+    <div class="team">
+    <h2>The Team</h2>
+      <ul>
+      <li> Oshin : Own pain Experience in training </li>
+      <li> Sujal : Technocrat Exposure to building platforms</li>
+     </ul>
+    </div>
+   </div>
+   <br>
+   <div class="right" align="right">
+    <div class="rightcon">
+      hello<br>
+
+    </div>
+      <div class="rightcon">
+        <i class="fa-brands fa-linkedin"></i>&nbsp;
+        <i class="fa-brands fa-facebook"></i>&nbsp;
+        <i class="fa-brands fa-twitter"></i>&nbsp;
+        <i class="fa-brands fa-github"></i>&nbsp;
+      </div>
+  </div>
   </footer>
 
   <script src="saarthi.js"></script>
+  <script src="https://kit.fontawesome.com/4f928f5798.js" crossorigin="anonymous"></script>
 </body>
 </html>
