linking of pages

--- a/saarthi.html
+++ b/saarthi.html
@@ -71,14 +71,14 @@
       <li> Oshin : Own pain Experience in training </li>
       <li> Sujal : Technocrat Exposure to building platforms</li>
      </ul>
+     <button class="btn" onclick="openpop1()">
+      Leave a comment..
+  </button>
     </div>
    </div>
    <br>
-   <div class="right" align="right">
-    <div class="rightcon">
-      hello<br>
-
-    </div>
+   <div class="right">
+    <br>
       <div class="rightcon">
         <i class="fa-brands fa-linkedin"></i>&nbsp;
         <i class="fa-brands fa-facebook"></i>&nbsp;
