--- a/saarthi.html
+++ b/saarthi.html
@@ -78,7 +78,7 @@
     <div class="rightcon">
       hello<br>
 
-    </div>
+    </div><br>
       <div class="rightcon">
         <i class="fa-brands fa-linkedin"></i>&nbsp;
         <i class="fa-brands fa-facebook"></i>&nbsp;
