--- a/saarthi.html
+++ b/saarthi.html
@@ -71,7 +71,7 @@
       <li> Oshin : Own pain Experience in training </li>
       <li> Sujal : Technocrat Exposure to building platforms</li>
      </ul>
-     <button class="btn">
+     <button class="btn" onclick="comment()">
       Leave a comment..
   </button>
     </div>
