update drivers profile

--- a/driverprofile.html
+++ b/driverprofile.html
@@ -27,7 +27,7 @@
     <div class="flip-card">
       <div class="flip-card-inner">
           <div class="flip-card-front">
-              <p class="title">Image</p>
+             <center><img src="./driver1.jpg" class="title" width="100%" height="250px" style="border-radius:20px;top:20px;border:1px solid orange" ></center>
           </div>
           <div class="flip-card-back" onclick="popopen()">
               <p class="title">Roshni Raut</p>
