--- a/driverprofile.html
+++ b/driverprofile.html
@@ -24,12 +24,12 @@
   </header>
 <br><br><br><br><br>
   <section class="drivercd" id="driver-profile">
-    <div class="flip-card">
+    <div class="flip-card" onclick="popopen()">
       <div class="flip-card-inner">
           <div class="flip-card-front">
              <center><img src="./driver1.jpg" class="title" width="100%" height="250px" style="border-radius:20px;top:20px;border:1px solid orange" ></center>
           </div>
-          <div class="flip-card-back" onclick="popopen()">
+          <div class="flip-card-back" >
               <p class="title">Roshni Raut</p>
               <p>Experience: 3yrs</p>
               <p>Rating: 4.5/5</p>
@@ -37,6 +37,19 @@
           </div>
       </div>
   </div>
+  <div class="flip-card" onclick="popopen()">
+    <div class="flip-card-inner">
+        <div class="flip-card-front">
+           <center><img src="./driver1.jpg" class="title" width="100%" height="250px" style="border-radius:20px;top:20px;border:1px solid orange" ></center>
+        </div>
+        <div class="flip-card-back" >
+            <p class="title">Sulebha Kumari</p>
+            <p>Experience: 2.5yrs</p>
+            <p>Rating: 4.3/5</p>
+            
+        </div>
+    </div>
+</div>
   <div class="pop" id="pop">
     <img src="Tick.jpg">
     <h2>Your Driver is Booked!</h2>
@@ -53,6 +66,9 @@
   <script>
     let popup=document.getElementById("pop");
   function popopen(){
+    popup.classList.add("pop-open");
+  }
+  function popopen1(){
     popup.classList.add("pop-open");
   }
   </script>
