--- a/saarthi.html
+++ b/saarthi.html
@@ -70,12 +70,9 @@
       <li> Oshin : Own pain Experience in training </li>
       <li> Sujal : Technocrat Exposure to building platforms</li>
      </ul>
-<<<<<<< HEAD
      <button class="btn" onclick="comment()">
-=======
      <br><br><br>
      <button class="btn">
->>>>>>> bd0cafae960d5e67f89b2765256797a9714cf36a
       Leave a comment..
   </button>
     </div>
@@ -97,10 +94,9 @@
         <p>Email : <span>Sarthi@gmail.com</span></p>
         <p>Phone : <span>+91943690365</span></p>
         <p>---------------------------------------------------------------------</p>
-        <p>sarthi is a leading female driver rental company dedicated to providing safe and reliable transportation solutions.Our mission is to empower women by offering them opportunities in the traditionally male -dominated field of professional driving.</p>
-        <p>
+        
           <br>
-        <p>&copy; 2023 Sarthi - Female Driver Rental</p></center><br><br>
+        <p>&copy; 2023 Sarthi - Female Driver Rental</p><br><br>
         </p>
       </div>
     </div>
