--- a/saarthi.html
+++ b/saarthi.html
@@ -60,7 +60,7 @@
       </div>
     </div>
   </section> -->
-  <footer>
+  <footer id="contact">
    <div class="left">
     <img src="./logo.png" alt="Sarthi Logo" class="logo">
     <br><br><br><br>
@@ -71,30 +71,29 @@
       <li> Sujal : Technocrat Exposure to building platforms</li>
      </ul>
      <button class="btn" onclick="comment()">
-     <br><br><br>
-     <button class="btn">
       Leave a comment..
-  </button>
+    </button>
     </div>
    </div>
    <br>
    <div class="right">
-      <div class="rightcon">
-        <i class="fa-brands fa-linkedin"></i>&nbsp;
-        <i class="fa-brands fa-facebook"></i>&nbsp;
-        <i class="fa-brands fa-twitter"></i>&nbsp;
-        <i class="fa-brands fa-github"></i>&nbsp;<br><br>
-      </div>
+    <div class="rightcon">
+      <a href="https://www.linkedin.com/in/oshin-67b4961b3"><i class="fa-brands fa-linkedin"></i></a>&nbsp;
+      <a href="https://www.facebook.com/sujal.junghare.5?mibextid=ZbWKwL"><i class="fa-brands fa-facebook"></i></a>&nbsp;
+      <a href="https://twitter.com/RohitMa68312212?t=3S2mhHzQH-3KwgPF4l0wtA&s=09"><i class="fa-brands fa-twitter"></i></a>&nbsp;
+      <a href="https://github.com/Blaze-0903"><i class="fa-brands fa-github"></i></a>&nbsp;<br><br>
+    </div>
       <div class="rightwrt">
         <a href="#home"><b>Home</b></a>&nbsp; - &nbsp;<a href="#about"><b>About</b></a> <br>
         <p>---------------------------------------------------------------------</p>
         <h3>
           Contact us :
         </h3>
-        <p>Email : <span>Sarthi@gmail.com</span></p>
-        <p>Phone : <span>+91943690365</span></p>
+        <p><b>Email :</b> <span>Sarthi@gmail.com</span></p>
+        <p><b>Phone :</b> <span>+91943690365</span></p>
         <p>---------------------------------------------------------------------</p>
-        
+        <p>Sarthi is a leading female driver rental company dedicated to providing safe and reliable transportation solutions.Our mission is to empower women by offering them opportunities in the traditionally male -dominated field of professional driving.</p>
+        <p>
           <br>
         <p>&copy; 2023 Sarthi - Female Driver Rental</p><br><br>
         </p>
