--- a/services.html
+++ b/services.html
@@ -28,16 +28,16 @@
         <center><h2>Our Services</h2></center>
         <div class="container" >
             <div class="card red">
-                <p class="tip">One</p>
-                <p class="second-text">Lorem Ipsum</p>
+                <p class="tip"><img src="./women-driver-1.webp" alt="women-driver-1" width="300px" height="300px"></p>
+                <p class="second-text"><h2>Chauffer</h2></p>
             </div>
             <div class="card blue">
-                <p class="tip">Two</p>
-                <p class="second-text">Lorem Ipsum</p>
+                <p class="tip"><img src="./women-driver-2.jpeg" alt="women-driver-2" width="300px" height="300px"></p>
+                <p class="second-text"><h2>Personal</h2></p>
             </div>
             <div class="card green">
-                <p class="tip">Three</p>
-                <p class="second-text">Lorem Ipsum</p>
+                <p class="tip"><img src="./women-driver-3.jpeg" alt="women-driver-3" width="300px" height="300px"></p>
+                <p class="second-text"><h2>Event</h2></p>
             </div>
         </div>
         </div>
