--- a/saarthi.html
+++ b/saarthi.html
@@ -84,7 +84,7 @@
       <a href="https://github.com/Blaze-0903"><i class="fa-brands fa-github"></i></a>&nbsp;<br><br>
     </div>
       <div class="rightwrt">
-        <a href="#home"><b>Home</b></a>&nbsp; - &nbsp;<a href="#about"><b>About</b></a> <br>
+        <a href="#home"><b>Home</b></a>&nbsp; - &nbsp;<a href="#about"><b>About</b></a> - &nbsp;<a href="#Services"><b>Services</b></a> <br>
         <p>---------------------------------------------------------------------</p>
         <h3>
           Contact us :
