--- a/saarthi.html
+++ b/saarthi.html
@@ -66,7 +66,7 @@
           <textarea id="comment" name="comment" rows="5" required=""></textarea>
           <label for="comment">Comment</label>
       </div>
-          <button type="submit">Submit</button>
+          <button type="submit" href="#contact">Submit</button>
         </form>
       </div>
   
@@ -103,9 +103,9 @@
   <script src="saarthi.js"></script>
   <script src="https://kit.fontawesome.com/4f928f5798.js" crossorigin="anonymous"></script>
   <script>
-    let popup = document.getElementById("commentpop");
+    let popupc = document.getElementById("commentpop");
     function opencommentpop(){
-      popup.classList.add("open-comment");
+      popupc.classList.add("open-comment");
     }
   </script>
 </body>
